PR/45545 Yui NARUSE: pipe2's return value is wrong